--- a/product-dev.yml
+++ b/product-dev.yml
@@ -1,7 +1,13 @@
-datasource:
+spring:
+  application:
+    name: product
+  datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: lixianelite
     url: jdbc:mysql://127.0.0.1/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
-  jpa:
-    show-sql: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+env:
