--- a/product-dev.yml
+++ b/product-dev.yml
@@ -6,6 +6,11 @@ spring:
     username: root
     password: lixianelite
     url: jdbc:mysql://127.0.0.1/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 eureka:
   client:
     service-url:
